--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab_2_4)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(lab_2_4 main.cpp)
+add_executable(lab_2_4 main.cpp timer.cpp timer.hpp)
